# ledger-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FRONTEND-PLAN.md  MEMORY.md  QUICKSTART.md  README.md  REFACTOR_PLAN.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  render.yaml  requirements.txt  setup.ps1  start.ps1
backend/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_upload.xlsx  user2_special.xlsx  vercel.json
backend/api/: index.py
backend/scripts/: bedrock_smoke_test.py
backend/src/ledger_sync/api/: README.md  __init__.py  account_classifications.py  ai_chat.py  ai_tools.py  ai_usage.py  analytics.py  analytics_helpers.py  analytics_v2.py  auth.py  calculations.py  calculations_helpers.py  categorization_rules.py  deps.py  exchange_rates.py  main.py  meta.py  oauth.py  preferences.py  preferences_ai.py  preferences_helpers.py  rate_limit.py  rates.py  reports.py  saved_views.py  stock_price.py  transactions.py  upload.py
backend/src/ledger_sync/api/ai_tools_impl/: __init__.py  analytics_tools.py  categories_summary.py  registry.py  transactions.py
backend/src/ledger_sync/api/analytics_v2_impl/: __init__.py  networth_misc.py  recurring.py  spending_rule.py  summaries.py
backend/src/ledger_sync/cli/: main.py
backend/src/ledger_sync/config/: instrument_rates.json  settings.py
backend/src/ledger_sync/core/: __init__.py  _analytics_helpers.py  ai_pricing.py  analytics_engine.py  auth.py  calculator.py  demo_data.py  encryption.py  insights.py  query_helpers.py  reconciler.py  reconciler_helpers.py  reconciler_transfers.py  report_generator.py  report_generator_html.py  rules.py  sync_engine.py  time_filter.py
backend/src/ledger_sync/core/analytics/: __init__.py  anomalies.py  base.py  classification.py  cohort.py  engine.py  fy_summaries.py  merchants.py  net_worth.py  recurring.py  summaries.py  trends.py
backend/src/ledger_sync/core/auth/: __init__.py  passwords.py  token_blacklist.py  tokens.py
backend/src/ledger_sync/db/: models.py  session.py
backend/src/ledger_sync/db/_models/: __init__.py  _constants.py  ai_usage.py  analytics.py  enums.py  investments.py  organization.py  planning.py  transactions.py  user.py
backend/src/ledger_sync/db/migrations/: MIGRATION_NOTES.md  env.py
backend/src/ledger_sync/db/migrations/versions/: 20260111_0946_343e4412d829_separate_transfers_into_dedicated_table.py  20260112_2214_b08e16c7e62c_simplify_transfers_unified_type.py  20260113_0647_103ba1695225_add_tax_records_table.py  20260203_1700_add_analytics_tables.py  20260203_1803_89fc7fc6f010_add_cashback_categories_to_preferences.py  20260203_1900_add_user_preferences.py  20260204_0930_add_new_income_categories.py  20260204_1100_simplify_income_classification.py  20260204_1200_income_subcategory_format.py  20260205_0001_add_user_authentication.py  20260206_0837_cc9fa860116e_add_user_id_to_aggregation_tables.py  20260207_1000_add_user_id_to_account_classifications.py  20260209_1200_add_spending_rule_and_cc_limits.py  20260209_1400_add_earning_start_date.py  20260221_1837_af63e055055a_add_created_at_updated_at_to_.py  20260301_1200_add_oauth_fields_to_users.py  20260302_1200_fix_missing_columns_postgresql.py  20260405_1256_c1511eec274c_add_user_scoping_cascades_indexes_.py  20260405_1430_a3b4c5d6e7f8_cascade_indexes_constraints_cleanup.py  20260405_1500_add_daily_summaries_table.py  20260410_1200_add_display_currency.py  20260411_0726_e844a13cc445_add_salary_structure_rsu_grants_and_.py  20260412_1200_add_missing_recurrence_enum_values.py  20260418_1200_add_ai_config_columns.py  20260427_1200_add_ai_usage_log_and_token_limits.py  20260607_1912_9cbf967f67a6_add_show_tds_schedule_preference.py  20260627_1200_add_epf_withdrawal_taxability.py  (+10 more)
backend/src/ledger_sync/ingest/: csv_loader.py  excel_loader.py  hash_id.py  normalizer.py  normalizer_rows.py  tax_normalizer.py  validator.py
backend/src/ledger_sync/schemas/: __init__.py  auth.py  categorization_rules.py  salary.py  saved_views.py  transactions.py  upload.py
backend/src/ledger_sync/services/: __init__.py  auth_service.py
backend/src/ledger_sync/utils/: logging.py
backend/tests/: conftest.py
backend/tests/integration/: test_account_case_folding.py  test_analytics_user_scoping.py  test_categorization_rules.py  test_closed_accounts.py  test_daily_net_worth_opening_balance.py  test_reconciler.py  test_saved_views.py  test_spending_rule.py  test_time_range_anchor_now.py  test_transaction_facets.py  test_transaction_tags.py  test_transfer_reconciliation.py
backend/tests/unit/: test_ai_chat.py  test_ai_tools.py  test_ai_usage.py  test_analytics_helpers.py  test_anomaly_detection_robust.py  test_auth.py  test_calculator.py  test_cohort_spending.py  test_encryption.py  test_exchange_rates.py  test_hash_id.py  test_income_analysis.py  test_investment_holdings.py  test_normalizer.py  test_quick_insights.py  test_rate_limit_user_key.py  test_rates.py  test_recurring_detection.py  test_recurring_frequency_bands.py  test_rules_engine.py  test_salary_schemas.py  test_stock_price.py  test_tax_regex.py  test_time_filter.py  test_token_version.py  test_upload_schema.py
(+790 files in other folders)
